--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,18 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-shadow: black;
 }
+.navbar {
+    padding: .8rem;
+}
+.navbar-nav li {
+    padding-right: 20px;
+}
+.padding {
+    padding-bottom: 2rem;
+}
+.right {
+    text-align: right;
+}
 footer {
     background-color: #FFFFFF;
     color: #000000;
